FEAT: Perfil del usuario, pipes y subida de fotografía

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <!-- Google -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="605043199754-o3q1q8g9sisjs3b89iqanl4fecoap1pj.apps.googleusercontent.com" />
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
